--- a/templates/haiwa_details.html
+++ b/templates/haiwa_details.html
@@ -94,7 +94,7 @@
                         A 5-minute walk from the Beach. The Haiwa By Hudels is an ideal tourist destination to stay in as it is located at a very convenient distance from the railway station and the airport. <br> . All the 10 rooms in the hotel provide a relaxing time for the guests. The rooms are designed with colorful interiors and fine furnishings. The tiled floors add grace to the rooms. <br> The rooms are installed with all the requirements that a person looks for. The rooms are divided into Deluxe A/C and Standard Non A/C. All the rooms have an attached bathrooms.
                     </p> <br>
                     
-                    <span>Room Types</span><br>
+                    <span class="txt_roomtype">Room Types</span><br>
                     <div class="list_div">
                         <li>Standard Non AC room --  Room Only </li>
                         <li>Deluxe AC Room  --  Room Only</li>
@@ -107,6 +107,41 @@
                         <li>Passport, Aadhar, Govt. ID and Driving License are accepted as ID proof(s)</li>
                         <li>Pets are not allowed.</li>
                     </div><br><br>
+
+                    <div class="room_main">
+                        <!--hotel-room 1-->
+    
+                            <div class="room_card">
+                                <img src="{% static 'image/property_img/haiwa_room1.jpeg' %}" alt="Swimming pool" class="room_card-image">
+                                <div class="room_card-content">
+                                    <h2>Deluxe AC Room</h2>
+                                    <ul class="room_details">
+                                        <li><img src="{% static 'image/property_img/bed-alt.png' %}" alt="" style="height: 20px; width: 20px;"> Double Bed</li>
+                                        <!-- <li><img src="{% static 'image/property_img/trillium.png' %}" alt="" style="height: 20px; width: 20px;"> Garden View  </li> -->
+                                        <li><img src="{% static 'image/property_img/Desk.png' %}" alt="" style="height: 20px; width: 20px;"> Work Desk </li>
+                                        <li><img src="{% static 'image/property_img/wifi.png' %}" alt="" style="height: 20px; width: 20px;"> Wi-Fi </li>
+                                        <li><img src="{% static 'image/property_img/water-bottle.png' %}" alt="" style="height: 20px; width: 20px;"> Complimentar water bottle </li>
+                                        <!-- <li><img src="{% static 'image/icon_png/ban.png' %}" alt="" style="height: 20px; width: 20px;"> Non-Refundable</li> -->
+                                    </ul>
+                                </div>
+                            </div> 
+                            
+                        <!--hotel-room-2-->
+    
+                            <div class="room_card">
+                                <img src="{% static 'image/property_img/haiwa_non_ac_room.png' %}" alt="Swimming pool" class="room_card-image">
+                                <div class="room_card-content">
+                                    <h2>Standard Non AC Room</h2>
+                                    <ul class="room_details">
+                                        <li><img src="{% static 'image/property_img/bed-alt.png' %}" alt="" style="height: 20px; width: 20px;">  Twin Bed </li>
+                                        <!-- <li><img src="{% static 'image/property_img/wave.png' %}" alt="" style="height: 20px; width: 20px;"> Sea View </li> -->
+                                        <li><img src="{% static 'image/property_img/Desk.png' %}" alt="" style="height: 20px; width: 20px;"> Work Desk </li>
+                                        <li><img src="{% static 'image/property_img/wifi.png' %}" alt="" style="height: 20px; width: 20px;"> Wi-Fi </li>
+                                        <li><img src="{% static 'image/property_img/water-bottle.png' %}" alt="" style="height: 20px; width: 20px;"> Complimentar water bottle </li>
+                                    </ul>
+                                </div>
+                            </div> 
+                    </div>
 
                     <h1 class="Location">Hotel-images</h1>
                     <div class="hotel-gallery" id="gallery">
